# crimeCastNYC

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/postgres/: init.sql
src/: main.py
src/analysis/: mining.py  ml.py
src/etl/: cleaner.py  cleaner_spark.py  downloader.py  loader.py
src/visualization/: generator.py
